<resources>
    <string name="app_name">Safe City</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Piero Violeta</string>
    <string name="nav_header_subtitle">piero@bajo.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dni_o_email">DNI o Email</string>
    <string name="title_activity_report_maps">Map</string>
    <string name="profile">Perfil</string>
    <string name="report_maps">Mapa de Incidencias</string>
    <string name="later_reports">Reportes Recientes</string>
    <string name="emergency_contacts">Contactos de Emergencia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_dni_email">Ingrese su correo electrónico o DNI, para enviar un código a su número asociado</string>
    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <string name="code">Enter Code</string>
    <string name="ingrese_su_nueva_contrase_a">Ingrese su nueva contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="new_password">Confirmar Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>

</resources>