<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_report_maps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/report_maps" />
        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/emergency_contacts" />
        <item
            android:id="@+id/nav_recent_reports"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/later_reports" />
    </group>
</menu>