<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="45dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".ui.login.NewPassword">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:ems="15"
        android:gravity="center_horizontal"
        android:text="@string/ingrese_su_nueva_contrase_a"
        android:textSize="22dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RecoveryNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:hint="@string/contrase_a">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RecoveryConfirmedNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:hint="@string/new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmedPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:textSize="22dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/confirmar" />

    <Button
        android:id="@+id/CancelToMainButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:textSize="22dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/cancelar" />
</LinearLayout>